# NanoServe---Custom-LLM-Inference-Engine

./: README.md  pyproject.toml  requirements.txt
benchmark/: compare.py  run_nanoserve.sh  run_vllm.sh
nanoserve/: .gitignore  Dockerfile  __init__.py  setup.sh
nanoserve/api/: __init__.py  protocol.py
nanoserve/benchmark/: client.py  prompts.json
nanoserve/cache/: __init__.py  kv_cache.py
nanoserve/kernels/: __init__.py  paged_attention_torch.py
nanoserve/model/: attention.py  llama.py  loader.py  rope.py
nanoserve/nanoserve/: config.py
nanoserve/nanoserve/api/: server.py
nanoserve/nanoserve/cache/: block_allocator.py
nanoserve/nanoserve/engine/: __init__.py  engine.py
nanoserve/nanoserve/kernels/: paged_attention_triton.py
nanoserve/nanoserve/model/: __init__.py
nanoserve/nanoserve/scheduler/: request.py
nanoserve/profile/: nsys_capture.sh
nanoserve/scheduler/: __init__.py  sampler.py  scheduler.py
nanoserve/scripts/: launch_server.py
profile/: ncu_capture.sh
