[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoserve"
version = "0.1.0"
description = "Custom LLM inference engine with paged KV cache and continuous batching"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["nanoserve*"]
